# mal

./: .gitignore  Makefile
mal-rustc/: .gitignore  Makefile  run
malrus/: .gitignore  Cargo.toml  run
malrus/ast/: Cargo.toml
malrus/ast/src/: lib.rs
malrus/builder/: Cargo.toml  build.rs
malrus/builder/src/: main.rs
malrus/step0/: Cargo.toml
malrus/step0_repl/: Cargo.toml
malrus/step0_repl/src/: lib.rs
malrus/step1_read_print/: Cargo.toml
malrus/step1_read_print/src/: lib.rs
rust-em/: Cargo.toml  env.rs  printer.rs  reader.rs  step0_repl.rs  step1_read_print.rs  step2_eval.rs  step3_env.rs  step4_if_fn_do.rs  types.rs
